--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,15 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>GA-LDN React Template</title>
+    <!-- <style>
+      @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+      </style> -->
+      <style>
+        @import url('https://fonts.googleapis.com/css2?family=K2D:wght@100&display=swap');
+        </style> 
+
+
+    <title>Alex Chan Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
