--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,20 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <style>
-      @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-      </style> -->
-      <style>
-        @import url('https://fonts.googleapis.com/css2?family=K2D:wght@100&display=swap');
-        </style> 
 
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+      </style> 
 
     <title>Alex Chan Portfolio</title>
   </head>
   <body>
+
+    <div class="grid"></div>
+
+    
+
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
