icon update because of darkmode

--- a/public/index.html
+++ b/public/index.html
@@ -31,16 +31,16 @@
 
     <script>  
       const options = {
-      bottom: '25px', // default: '32px'
+      bottom: '20px', // default: '32px'
       right: 'unset', // default: '32px'
-      left: '25px', // default: 'unset'
+      left: '10px', // default: 'unset'
       time: '0.6s', // default: '0.3s'
       mixColor: '#fff', // default: '#fff'
       backgroundColor: 'url(https://i.imgur.com/wjxCrMe.jpg?1)',  // default: '#fff'
       buttonColorDark: '#000',  // default: '#100f2c'
       buttonColorLight: '#fff', // default: '#fff'
       saveInCookies: true, // default: true,
-      label: 'Hello!', // default: ''
+      label: '', // default: ''
       autoMatchOsTheme: true // default: true
     }
     
