--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
       }
     </style>
 
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 
   </head>
   <body>
@@ -47,7 +49,12 @@
     const darkmode = new Darkmode(options);
     darkmode.showWidget();
     
-        </script>
+    </script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
 
   </body>
 </html>
