AOS quicker and skills section updated

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 
     <script>  
       const options = {
-      bottom: '20px', // default: '32px'
+      top: '20px', // default: '32px'
       right: 'unset', // default: '32px'
       left: '10px', // default: 'unset'
       time: '0.6s', // default: '0.3s'
@@ -42,7 +42,7 @@
       buttonColorDark: '#000',  // default: '#100f2c'
       buttonColorLight: '#fff', // default: '#fff'
       saveInCookies: true, // default: true,
-      label: '', // default: ''
+      label: 'mode', // default: ''
       autoMatchOsTheme: true // default: true
     }
     
